master: allure impl